--- a/src/main/efaps/DBProperties/Loyalty_es.properties
+++ b/src/main/efaps/DBProperties/Loyalty_es.properties
@@ -16,3 +16,12 @@
 
 
 Loyalty_MyDesk.Label = Fidelizaci\u00F3n
+
+Loyalty_AccountAbstract/Type.Label = Tipo
+Loyalty_AccountAbstract/Created.Label = Fecha de creaci\u00F3n
+Loyalty_AccountAbstract/Creator.Label = Creador
+Loyalty_AccountAbstract/Modified.Label = Fecha de modificaci\u00F3n
+Loyalty_AccountAbstract/Modifier.Label = Modificador
+
+Loyalty_AccountMyDesk.Title = Cuentas de fidelizaci\u00F3n
+Loyalty_AccountMyDesk.Label = Cuentas
