--- a/src/main/efaps/DBProperties/Loyalty_es.properties
+++ b/src/main/efaps/DBProperties/Loyalty_es.properties
@@ -25,3 +25,10 @@ Loyalty_ProgramAbstract/Modifier.Label = Modificador
 
 Loyalty_ProgramMyDesk.Title = Programas de fidelizaci\u00F3n
 Loyalty_ProgramMyDesk.Label = Programas
+
+Loyalty_ProgramMyDesk_Menu_Action_Delete.Label = Eliminar
+Loyalty_ProgramMyDesk_Menu_Action_Delete.Question = \u00BFEst\u00E1 seguro que desea eliminar lo seleccionado?
+
+Loyalty_ProgramMyDesk_Menu_Action_CreatePoints.Label = Crear programa de puntos
+Loyalty_ProgramMyDesk_Menu_Action_CreatePoints.Title = Crear programa de puntos
+Loyalty_PointsForm.contactLink.Label = Contacto
