--- a/src/main/efaps/DBProperties/Loyalty_es.properties
+++ b/src/main/efaps/DBProperties/Loyalty_es.properties
@@ -17,11 +17,21 @@
 
 Loyalty_MyDesk.Label = Fidelizaci\u00F3n
 
+Loyalty_Points.Label = Programa de puntos
+Loyalty_Points/Type.Label = Tipo
+Loyalty_Points/Created.Label = Fecha de creaci\u00F3n
+Loyalty_Points/Creator.Label = Creador
+Loyalty_Points/Modified.Label = Fecha de modificaci\u00F3n
+Loyalty_Points/Modifier.Label = Modificador
+
+
 Loyalty_ProgramAbstract/Type.Label = Tipo
 Loyalty_ProgramAbstract/Created.Label = Fecha de creaci\u00F3n
 Loyalty_ProgramAbstract/Creator.Label = Creador
 Loyalty_ProgramAbstract/Modified.Label = Fecha de modificaci\u00F3n
 Loyalty_ProgramAbstract/Modifier.Label = Modificador
+Loyalty_ProgramAbstract/ContactLink.Label = Contacto
+
 
 Loyalty_ProgramMyDesk.Title = Programas de fidelizaci\u00F3n
 Loyalty_ProgramMyDesk.Label = Programas
@@ -32,3 +42,12 @@ Loyalty_ProgramMyDesk_Menu_Action_Delete.Question = \u00BFEst\u00E1 seguro que d
 Loyalty_ProgramMyDesk_Menu_Action_CreatePoints.Label = Crear programa de puntos
 Loyalty_ProgramMyDesk_Menu_Action_CreatePoints.Title = Crear programa de puntos
 Loyalty_PointsForm.contactLink.Label = Contacto
+
+Loyalty_PointsTree_Menu_Action_Edit.Label = Editar
+Loyalty_PointsTree_Menu_Action_Edit.Title = Editar
+Loyalty_PointsTree_Menu_Action.Label = Acci\u00F3n
+
+Loyalty_PointsTree.Title = $<type.label>
+Loyalty_PointsTree.Label = $<type.label>
+
+
