--- a/src/main/efaps/DBProperties/Loyalty_es.properties
+++ b/src/main/efaps/DBProperties/Loyalty_es.properties
@@ -14,40 +14,41 @@
 # limitations under the License.
 #
 
-
 Loyalty_MyDesk.Label = Fidelizaci\u00F3n
-
 Loyalty_Points.Label = Programa de puntos
-Loyalty_Points/Type.Label = Tipo
 Loyalty_Points/Created.Label = Fecha de creaci\u00F3n
 Loyalty_Points/Creator.Label = Creador
 Loyalty_Points/Modified.Label = Fecha de modificaci\u00F3n
 Loyalty_Points/Modifier.Label = Modificador
-
-
-Loyalty_ProgramAbstract/Type.Label = Tipo
+Loyalty_Points/Type.Label = Tipo
+Loyalty_PointsForm.contactLink.Label = Contacto
+Loyalty_PointsTree.Label = $<type.label>
+Loyalty_PointsTree.Title = $<type.label>
+Loyalty_PointsTree_Menu_Action.Label = Acci\u00F3n
+Loyalty_PointsTree_Menu_Action_Edit.Label = Editar
+Loyalty_PointsTree_Menu_Action_Edit.Title = Editar
+Loyalty_ProgramAbstract/ContactLink.Label = Contacto
 Loyalty_ProgramAbstract/Created.Label = Fecha de creaci\u00F3n
 Loyalty_ProgramAbstract/Creator.Label = Creador
 Loyalty_ProgramAbstract/Modified.Label = Fecha de modificaci\u00F3n
 Loyalty_ProgramAbstract/Modifier.Label = Modificador
-Loyalty_ProgramAbstract/ContactLink.Label = Contacto
-
-
-Loyalty_ProgramMyDesk.Title = Programas de fidelizaci\u00F3n
+Loyalty_ProgramAbstract/Type.Label = Tipo
 Loyalty_ProgramMyDesk.Label = Programas
-
-Loyalty_ProgramMyDesk_Menu_Action_Delete.Label = Eliminar
-Loyalty_ProgramMyDesk_Menu_Action_Delete.Question = \u00BFEst\u00E1 seguro que desea eliminar lo seleccionado?
-
+Loyalty_ProgramMyDesk.Title = Programas de fidelizaci\u00F3n
+Loyalty_ProgramMyDesk_Menu_Action.Label = Acci\u00F3n
 Loyalty_ProgramMyDesk_Menu_Action_CreatePoints.Label = Crear programa de puntos
 Loyalty_ProgramMyDesk_Menu_Action_CreatePoints.Title = Crear programa de puntos
-Loyalty_PointsForm.contactLink.Label = Contacto
+Loyalty_ProgramMyDesk_Menu_Action_Delete.Label = Eliminar
+Loyalty_ProgramMyDesk_Menu_Action_Delete.Question = \u00BFEst\u00E1 seguro que desea eliminar lo seleccionado?
+Loyalty_ProgramStatus.Label = Promo_PromotionStatus
+Loyalty_ProgramStatus/Key.Status.Active = Activado
+Loyalty_ProgramStatus/Key.Status.Inactive = Deactivado
 
-Loyalty_PointsTree_Menu_Action_Edit.Label = Editar
-Loyalty_PointsTree_Menu_Action_Edit.Title = Editar
-Loyalty_PointsTree_Menu_Action.Label = Acci\u00F3n
 
-Loyalty_PointsTree.Title = $<type.label>
-Loyalty_PointsTree.Label = $<type.label>
+
+
+
+
+
 
 
