--- a/src/main/efaps/DBProperties/Loyalty_es.properties
+++ b/src/main/efaps/DBProperties/Loyalty_es.properties
@@ -43,8 +43,8 @@ Loyalty_ProgramMyDesk_Menu_Action_Delete.Question = \u00BFEst\u00E1 seguro que d
 Loyalty_ProgramStatus.Label = Promo_PromotionStatus
 Loyalty_ProgramStatus/Key.Status.Active = Activado
 Loyalty_ProgramStatus/Key.Status.Inactive = Deactivado
-
-
+Loyalty_Points/Status.Label = Estatus
+Loyalty_ProgramAbstract/StatusAbstract.Label = Estatus
 
 
 
