--- a/src/main/efaps/DBProperties/Loyalty_es.properties
+++ b/src/main/efaps/DBProperties/Loyalty_es.properties
@@ -15,11 +15,15 @@
 #
 
 Loyalty_MyDesk.Label = Fidelizaci\u00F3n
+Loyalty_PaymentPointsStatus.Label = Loyalty_PaymentPointsStatus
+Loyalty_PaymentPointsStatus/Key.Status.Canceled = Anulado
+Loyalty_PaymentPointsStatus/Key.Status.Closed = Cerrado
 Loyalty_Points.Label = Programa de puntos
 Loyalty_Points/Created.Label = Fecha de creaci\u00F3n
 Loyalty_Points/Creator.Label = Creador
 Loyalty_Points/Modified.Label = Fecha de modificaci\u00F3n
 Loyalty_Points/Modifier.Label = Modificador
+Loyalty_Points/Status.Label = Estatus
 Loyalty_Points/Type.Label = Tipo
 Loyalty_PointsForm.contactLink.Label = Contacto
 Loyalty_PointsTree.Label = $<type.label>
@@ -32,6 +36,7 @@ Loyalty_ProgramAbstract/Created.Label = Fecha de creaci\u00F3n
 Loyalty_ProgramAbstract/Creator.Label = Creador
 Loyalty_ProgramAbstract/Modified.Label = Fecha de modificaci\u00F3n
 Loyalty_ProgramAbstract/Modifier.Label = Modificador
+Loyalty_ProgramAbstract/StatusAbstract.Label = Estatus
 Loyalty_ProgramAbstract/Type.Label = Tipo
 Loyalty_ProgramMyDesk.Label = Programas
 Loyalty_ProgramMyDesk.Title = Programas de fidelizaci\u00F3n
@@ -40,15 +45,25 @@ Loyalty_ProgramMyDesk_Menu_Action_CreatePoints.Label = Crear programa de puntos
 Loyalty_ProgramMyDesk_Menu_Action_CreatePoints.Title = Crear programa de puntos
 Loyalty_ProgramMyDesk_Menu_Action_Delete.Label = Eliminar
 Loyalty_ProgramMyDesk_Menu_Action_Delete.Question = \u00BFEst\u00E1 seguro que desea eliminar lo seleccionado?
-Loyalty_ProgramStatus.Label = Promo_PromotionStatus
+Loyalty_ProgramStatus.Label = Loyalty_ProgramStatus
 Loyalty_ProgramStatus/Key.Status.Active = Activado
 Loyalty_ProgramStatus/Key.Status.Inactive = Deactivado
-Loyalty_Points/Status.Label = Estatus
-Loyalty_ProgramAbstract/StatusAbstract.Label = Estatus
+
+Loyalty_PaymentStatusAbstract.Label = Loyalty_PaymentStatusAbstract
+Loyalty_PaymentPoints.Label = Reg. de cobro con puntos
+Loyalty_PaymentPoints/Name.Label = Nombre
+Loyalty_PaymentPoints/Amount.Label = Monto
+Loyalty_PaymentPoints/CurrencyLink.Label = Moneda
+Loyalty_PaymentPoints/StatusAbstract.Label = Estatus
+Loyalty_PaymentPoints/Created.Label = Fecha de creaci\u00F3n
+Loyalty_PaymentPoints/Creator.Label = Creador
+Loyalty_PaymentPoints/Modified.Label = Fecha de modificaci\u00F3n
+Loyalty_PaymentPoints/Modifier.Label = Modificador
 
 
 
-
+Loyalty_PointsTree_Payment.Label = Reg. de cobro
+Loyalty_PointsTree_Payment.Title = Reg. de cobro con puntos
 
 
 
