--- a/src/main/efaps/DBProperties/Loyalty_es.properties
+++ b/src/main/efaps/DBProperties/Loyalty_es.properties
@@ -60,10 +60,15 @@ Loyalty_PaymentPoints/Creator.Label = Creador
 Loyalty_PaymentPoints/Modified.Label = Fecha de modificaci\u00F3n
 Loyalty_PaymentPoints/Modifier.Label = Modificador
 
-
+Loyalty_PaymentPoints/Code.Label = Codigo
 
 Loyalty_PointsTree_Payment.Label = Reg. de cobro
 Loyalty_PointsTree_Payment.Title = Reg. de cobro con puntos
+Loyalty_PaymentPoints/Date.Label = Fecha
+Loyalty_PaymentPointsTree.Label = $<type.label> - $<attribute[Code]>
+Loyalty_PaymentPointsTree.Title = $<type.label> - $<attribute[Code]>
 
+Loyalty_PaymentPointsTree_Menu_Action_SetCanceled.Question = \u00BFEst\u00E1 seguro que desea anular?
+Loyalty_PaymentPointsTree_Menu_Action_SetCanceled.Label = Anular
 
 
