--- a/src/main/efaps/DBProperties/Loyalty_es.properties
+++ b/src/main/efaps/DBProperties/Loyalty_es.properties
@@ -14,10 +14,39 @@
 # limitations under the License.
 #
 
+Loyalty_AttributeDefinitionMyDesk_Menu_Action.Label = Fidelizaci\u00F3n
+Loyalty_AttributeDefinitionMyDesk_Menu_Action_CreatePointsType.Label = Crear Tipo de Programa de puntos
+Loyalty_AttributeDefinitionMyDesk_Menu_Action_CreatePointsType.Title = Crear Tipo de Programa de puntos
+Loyalty_AttributeDefinitionPointsType.Label = POS - Tag de Archivo
+Loyalty_AttributeDefinitionPointsType/Created.Label = Fecha de creaci\u00F3n
+Loyalty_AttributeDefinitionPointsType/Creator.Label = Creador
+Loyalty_AttributeDefinitionPointsType/Description.Label = Descripci\u00F3n
+Loyalty_AttributeDefinitionPointsType/MappingKey.Label = Clave de mapeo
+Loyalty_AttributeDefinitionPointsType/Modified.Label = Fecha de modificaci\u00F3n
+Loyalty_AttributeDefinitionPointsType/Modifier.Label = Modificador
+Loyalty_AttributeDefinitionPointsType/StatusAbstract.Label = Estatus
+Loyalty_AttributeDefinitionPointsType/Type.Label = Tipo
+Loyalty_AttributeDefinitionPointsType/Value.Label = Valor
 Loyalty_MyDesk.Label = Fidelizaci\u00F3n
+Loyalty_PaymentPoints.Label = Reg. de cobro con puntos
+Loyalty_PaymentPoints/Amount.Label = Monto
+Loyalty_PaymentPoints/Code.Label = Codigo
+Loyalty_PaymentPoints/Created.Label = Fecha de creaci\u00F3n
+Loyalty_PaymentPoints/Creator.Label = Creador
+Loyalty_PaymentPoints/CurrencyLink.Label = Moneda
+Loyalty_PaymentPoints/Date.Label = Fecha
+Loyalty_PaymentPoints/Modified.Label = Fecha de modificaci\u00F3n
+Loyalty_PaymentPoints/Modifier.Label = Modificador
+Loyalty_PaymentPoints/Name.Label = Nombre
+Loyalty_PaymentPoints/StatusAbstract.Label = Estatus
 Loyalty_PaymentPointsStatus.Label = Loyalty_PaymentPointsStatus
 Loyalty_PaymentPointsStatus/Key.Status.Canceled = Anulado
 Loyalty_PaymentPointsStatus/Key.Status.Closed = Cerrado
+Loyalty_PaymentPointsTree.Label = $<type.label> - $<attribute[Code]>
+Loyalty_PaymentPointsTree.Title = $<type.label> - $<attribute[Code]>
+Loyalty_PaymentPointsTree_Menu_Action_SetCanceled.Label = Anular
+Loyalty_PaymentPointsTree_Menu_Action_SetCanceled.Question = \u00BFEst\u00E1 seguro que desea anular?
+Loyalty_PaymentStatusAbstract.Label = Loyalty_PaymentStatusAbstract
 Loyalty_Points.Label = Programa de puntos
 Loyalty_Points/Created.Label = Fecha de creaci\u00F3n
 Loyalty_Points/Creator.Label = Creador
@@ -31,6 +60,8 @@ Loyalty_PointsTree.Title = $<type.label>
 Loyalty_PointsTree_Menu_Action.Label = Acci\u00F3n
 Loyalty_PointsTree_Menu_Action_Edit.Label = Editar
 Loyalty_PointsTree_Menu_Action_Edit.Title = Editar
+Loyalty_PointsTree_Payment.Label = Reg. de cobro
+Loyalty_PointsTree_Payment.Title = Reg. de cobro con puntos
 Loyalty_ProgramAbstract/ContactLink.Label = Contacto
 Loyalty_ProgramAbstract/Created.Label = Fecha de creaci\u00F3n
 Loyalty_ProgramAbstract/Creator.Label = Creador
@@ -48,27 +79,3 @@ Loyalty_ProgramMyDesk_Menu_Action_Delete.Question = \u00BFEst\u00E1 seguro que d
 Loyalty_ProgramStatus.Label = Loyalty_ProgramStatus
 Loyalty_ProgramStatus/Key.Status.Active = Activado
 Loyalty_ProgramStatus/Key.Status.Inactive = Deactivado
-
-Loyalty_PaymentStatusAbstract.Label = Loyalty_PaymentStatusAbstract
-Loyalty_PaymentPoints.Label = Reg. de cobro con puntos
-Loyalty_PaymentPoints/Name.Label = Nombre
-Loyalty_PaymentPoints/Amount.Label = Monto
-Loyalty_PaymentPoints/CurrencyLink.Label = Moneda
-Loyalty_PaymentPoints/StatusAbstract.Label = Estatus
-Loyalty_PaymentPoints/Created.Label = Fecha de creaci\u00F3n
-Loyalty_PaymentPoints/Creator.Label = Creador
-Loyalty_PaymentPoints/Modified.Label = Fecha de modificaci\u00F3n
-Loyalty_PaymentPoints/Modifier.Label = Modificador
-
-Loyalty_PaymentPoints/Code.Label = Codigo
-
-Loyalty_PointsTree_Payment.Label = Reg. de cobro
-Loyalty_PointsTree_Payment.Title = Reg. de cobro con puntos
-Loyalty_PaymentPoints/Date.Label = Fecha
-Loyalty_PaymentPointsTree.Label = $<type.label> - $<attribute[Code]>
-Loyalty_PaymentPointsTree.Title = $<type.label> - $<attribute[Code]>
-
-Loyalty_PaymentPointsTree_Menu_Action_SetCanceled.Question = \u00BFEst\u00E1 seguro que desea anular?
-Loyalty_PaymentPointsTree_Menu_Action_SetCanceled.Label = Anular
-
-
