PointsType in Points

--- a/src/main/efaps/DBProperties/Loyalty_es.properties
+++ b/src/main/efaps/DBProperties/Loyalty_es.properties
@@ -79,3 +79,8 @@ Loyalty_ProgramMyDesk_Menu_Action_Delete.Question = \u00BFEst\u00E1 seguro que d
 Loyalty_ProgramStatus.Label = Loyalty_ProgramStatus
 Loyalty_ProgramStatus/Key.Status.Active = Activado
 Loyalty_ProgramStatus/Key.Status.Inactive = Deactivado
+Loyalty_PaymentPoints/PointsTypeLink.Label = Tipo de puntos
+Loyalty_PaymentPointsTree_Menu_Action_Edit.Label = Editar
+Loyalty_PaymentPointsTree_Menu_Action_Edit.Title = Editar $<type.label> $<attribute[Name]>
+
+
