--- a/src/main/efaps/DBProperties/Loyalty_es.properties
+++ b/src/main/efaps/DBProperties/Loyalty_es.properties
@@ -82,5 +82,5 @@ Loyalty_ProgramStatus/Key.Status.Inactive = Deactivado
 Loyalty_PaymentPoints/PointsTypeLink.Label = Tipo de puntos
 Loyalty_PaymentPointsTree_Menu_Action_Edit.Label = Editar
 Loyalty_PaymentPointsTree_Menu_Action_Edit.Title = Editar $<type.label> $<attribute[Name]>
-
-
+Loyalty_PaymentPointsForm.contact.Label = Contacto
+Loyalty_PaymentPointsTree_Menu_Action.Label = Acci\u00F3n
