--- a/src/main/efaps/DBProperties/Loyalty_es.properties
+++ b/src/main/efaps/DBProperties/Loyalty_es.properties
@@ -17,7 +17,7 @@
 Loyalty_AttributeDefinitionMyDesk_Menu_Action.Label = Fidelizaci\u00F3n
 Loyalty_AttributeDefinitionMyDesk_Menu_Action_CreatePointsType.Label = Crear Tipo de Programa de puntos
 Loyalty_AttributeDefinitionMyDesk_Menu_Action_CreatePointsType.Title = Crear Tipo de Programa de puntos
-Loyalty_AttributeDefinitionPointsType.Label = POS - Tag de Archivo
+Loyalty_AttributeDefinitionPointsType.Label = Fidelizaci\u00F3n - Tipo de puntos
 Loyalty_AttributeDefinitionPointsType/Created.Label = Fecha de creaci\u00F3n
 Loyalty_AttributeDefinitionPointsType/Creator.Label = Creador
 Loyalty_AttributeDefinitionPointsType/Description.Label = Descripci\u00F3n
@@ -84,3 +84,11 @@ Loyalty_PaymentPointsTree_Menu_Action_Edit.Label = Editar
 Loyalty_PaymentPointsTree_Menu_Action_Edit.Title = Editar $<type.label> $<attribute[Name]>
 Loyalty_PaymentPointsForm.contact.Label = Contacto
 Loyalty_PaymentPointsTree_Menu_Action.Label = Acci\u00F3n
+
+Loyalty_PaymentPoints/Authorization.Label = Autorizaci\u00F3n
+Loyalty_PaymentPoints/PointsAmount.Label = Candidad de puntos
+Loyalty_PaymentPoints/OperationId.Label = Id de Operaci\u00F3n
+Loyalty_PaymentPoints/Info.Label = Informaci\u00F3n adicional
+Loyalty_PaymentPoints/Status.Label = Estatus
+
+
