--- a/src/main/efaps/DBProperties/Loyalty_es.properties
+++ b/src/main/efaps/DBProperties/Loyalty_es.properties
@@ -54,6 +54,7 @@ Loyalty_Points/Modified.Label = Fecha de modificaci\u00F3n
 Loyalty_Points/Modifier.Label = Modificador
 Loyalty_Points/Status.Label = Estatus
 Loyalty_Points/Type.Label = Tipo
+Loyalty_Points/Identifier.Label = Identificador
 Loyalty_PointsForm.contactLink.Label = Contacto
 Loyalty_PointsTree.Label = $<type.label>
 Loyalty_PointsTree.Title = $<type.label>
@@ -69,6 +70,7 @@ Loyalty_ProgramAbstract/Modified.Label = Fecha de modificaci\u00F3n
 Loyalty_ProgramAbstract/Modifier.Label = Modificador
 Loyalty_ProgramAbstract/StatusAbstract.Label = Estatus
 Loyalty_ProgramAbstract/Type.Label = Tipo
+Loyalty_ProgramAbstract/Identifier.Label = Identificador
 Loyalty_ProgramMyDesk.Label = Programas
 Loyalty_ProgramMyDesk.Title = Programas de fidelizaci\u00F3n
 Loyalty_ProgramMyDesk_Menu_Action.Label = Acci\u00F3n
